adding rest controller

--- a/src/main/resources/hystrix.properties
+++ b/src/main/resources/hystrix.properties
@@ -20,7 +20,7 @@ hystrix.command.default.metrics.rollingStats.timeInMilliseconds = 10000
 
 hystrix.command.default.metrics.rollingPercentile.enabled = true
 
-hystrix.command.metrics.healthSnapshot.intervalInMilliseconds = 1000
+#hystrix.command.metrics.healthSnapshot.intervalInMilliseconds = 1000
 
 #hystrix.threadpool.default.allowMaximumSizeToDivergeFromCoreSize = true
 
